# openai-reflect

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yaml  clang-format-check.yml
components/peer/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  audio.cpp  display.cpp  http.cpp  idf_component.yml  index.html  lifx.cpp  realtimeapi.cpp  reflect.cpp  reflect.hpp  webrtc.cpp  wifi.cpp
